Fix image not showing issue

--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ header {
 }
 
 .subHeader {
-  background-image: url(/images/2021.png);
+  background-image: url(../images/2021.png);
   background-clip: inherit;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
